tests/transpiler/x/zig/inner_join.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/inner_join.zig:16:23: error: unable to infer array size
